Preventing collapsed username button with short value

--- a/admin/assets/less/custom.less
+++ b/admin/assets/less/custom.less
@@ -192,6 +192,12 @@
 
 #header-navbar #user-tools-selector{
   margin-right: 10px;
+
+  #user-tools-name{
+    min-width: 88px;
+    text-align: left;
+  }
+  
 }
 
 #header-navbar #site-selector-list.dropdown-menu{
